--- a/.github/workflows/wakatime.yml
+++ b/.github/workflows/wakatime.yml
@@ -18,3 +18,4 @@ jobs:
           SHOW_DAYS_OF_WEEK: False
           SHOW_TIMEZONE: False
           SHOW_LOC_CHART: False
+          SHOW_COMMIT: False
